# concurrent-collections

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  README.md
src/ccol/: common.h  double_buffer_queue.h  sparse_vector.h  spinlock.h  trivial_vector.h
tests/: double_buffer_queue_test.cpp  sparse_vector_test.cpp  trivial_vector_test.cpp
